# xorl

./: .codespellrc  .dockerignore  .gitignore  .gitmodules  .pre-commit-config.yaml  CONTRIBUTING.md  DEVELOPMENT.md  README.md  pyproject.sglang.toml  pyproject.toml
.github/workflows/: docs.yml  lint.yml
docs/: astro.config.mjs  deploy_docs.sh  package-lock.json  package.json
docs/src/styles/: custom.css
examples/local/coderforge/: README.md
examples/local/dummy/: README.md
examples/local/together_coder/: README.md
examples/server/multilora/: multilora_rl_recipe.py
examples/server/no_robot_sft/: README.md  run_sft.py
examples/server/password_memorization/: README.md  run_password_test.py  run_train_and_infer.py
experiments/whole-step-cudagraph/: NOTES.md  compile_before_fully_shard_repro.py  fa4_bwd.py  fa4_smoke.py  graphbreak_compiled_autograd_repro.py  minimal_fsdp2_manual_capture.py  qwen3_capture_harness.py
experiments/whole-step-cudagraph/runners/: run.sh  run_8b_muon.sh  scratch_final.sh  scratch_final2.sh  scratch_gbreak.sh  scratch_levers.sh  scratch_markstep.sh  scratch_matrix.sh  scratch_measure.sh  scratch_measure_async.sh  scratch_mg_sweep.sh  scratch_packing_sweep.sh  scratch_percompile.sh
experiments/whole-step-cudagraph/talk/: build.py  facts.json  index.html
results/tables/: sp-series-comparison.md
src/xorl/: __init__.py  arguments.py
src/xorl/checkpoint/: __init__.py  checkpointer.py  format_utils.py
src/xorl/cli/: direct_train.py  export_quantized.py  preprocess.py  train.py
src/xorl/data/: __init__.py  constants.py  data_loader.py
src/xorl/distillation/: __init__.py  teacher_cache.py  (+1 more)
tests/: conftest.py  test_arguments.py  test_example_assets.py
tests/_helpers/: opd.py
tests/checkpoint/: test_checkpointer_process_group.py
tests/data/: __init__.py  test_data_loader.py  test_data_loader_distributed.py
tests/distributed/: __init__.py  conftest.py  distributed_utils.py  run_distributed_tests.sh  test_bf16_a2a_fsdp_hook.py  test_bf16_a2a_reduce.py  test_deepep_async_combine_guard.py  test_deepep_correctness.py  test_deepep_grad_scatter.py  test_deepep_scatter_helpers.py  test_deepseek_v3_ep_checkpoint.py  test_dist_utils.py  test_ep_clip_grad_norm.py  test_ep_lora_weight_slicing.py  test_flashqla_cp_equivalence.py  test_fp8_deepep_training.py  test_fused_linear_logprob_tp.py  test_gradient_accumulate_loss.py  test_linear_attention_cp_equivalence.py  test_lm_head_tp_ep_parallel_state.py  test_lm_head_tp_fsdp_e2e.py  test_lm_head_tp_loss.py  test_lm_head_tp_parallel_state.py  test_loss_metric_reductions.py  test_moe_memory_efficient_permutation.py  test_muon_full_gradient.py  test_muon_optimizer_ep_reshard.py  test_offloading.py  test_olmo2_qk_rms_norm.py  test_olmo2_tp_e2e.py  test_parallel_plan_meta_slice.py  test_parallel_state.py  test_pipeline_parallel.py  test_quack_deepep_no_permute_parity.py  test_qwen3_5_ulysses_cp.py  test_ring_attention.py  test_sequence_parallel.py  test_shared_prefix_sp.py  test_sync_padding.py  test_tensor_parallel.py  (+4 more)
tests/e2e/: conftest.py  e2e_utils.py  run_e2e.sh  server_utils.py  test_fp8_training.py  test_nemotron_h_training.py  test_opd_cpu.py  test_opd_full_pipeline.py  test_opd_gpu.py  test_opd_sglang_teacher.py
tests/fp8_training/: test_config_compat.py  test_fp8_linear.py  test_fp8_moe.py
tests/models/: __init__.py  test_compute_loss_sharded_empty_cache.py  test_deepseek_v3_checkpoint_handler.py  test_deepseek_v3_model.py  test_deepseek_v3_registry.py  test_dsv4_attention.py  test_dsv4_autoconfig.py  test_dsv4_loader.py  test_dsv4_lora.py  test_dsv4_model.py  test_dsv4_moe.py  test_glm5_support.py  test_gradient_checkpointing.py  test_kimi_tokenizer.py  test_load_balancing_loss.py  test_lora_merge_fp32_cast_once.py  test_lora_moe_attention_targets.py  test_model_state.py  test_module_utils_broadcast.py  test_moe_eager_ep.py  test_moe_experts_lora.py  test_moe_fused_gate_up_proj.py  test_moe_routing_cache.py  test_moe_routing_replay.py  test_moe_train_router_dispatch.py  test_moe_weight_auto_merge.py  test_moe_weight_loading_integration.py  test_mtp_low_precision_policy.py  test_nemotron_h_checkpoint.py  test_nemotron_h_model.py  test_nemotron_h_registry.py  test_olmo2_support.py  test_qwen2_support.py  test_qwen3_5_activation_policy.py  test_qwen3_5_apply_rotary.py  test_qwen3_5_linear_attention_mapping.py  test_qwen3_5_registry.py  test_qwen3_moe_fused_lora.py  test_qwen_hidden_states.py  test_regather_routing_sqrtsoftplus.py  (+1 more)
tests/ops/: __init__.py  test_attention.py  test_block_fp8.py  test_block_fp8_gkn.py  test_eager_vs_native_moe.py  test_ep_adapter_wrappers.py  test_ep_routing_scores.py  test_flashqla_gdn.py  test_fused_silu_and_mul.py  test_gated_delta_rule.py  test_group_gemm.py  test_lora_utils.py  test_moe_act.py  test_moe_gkn_format.py  test_moe_nongated.py  test_moe_ops.py  test_moe_torch_compile.py  test_nf4.py  test_prequant_gnk_to_gkn.py  test_quack_ep_parity.py  test_shared_prefix_attention.py  test_shared_prefix_integration.py  test_shared_prefix_repack.py  test_sparse_mla_kernels.py  test_ssm_mamba2.py
tests/optim/: test_cautious_weight_decay.py  test_distsignsgd.py  test_lr_scheduler.py  test_master_weight_adamw.py  test_muon.py  test_signsgd.py  test_stochastic_round.py
tests/qarl/: test_calibration.py  test_fake_quant.py  test_sync_quantization.py  test_training_smoke.py
tests/qlora/: test_detect_prequantized.py  test_imports.py  test_moe_load_experts.py  test_qlora.py  test_quantize_error_reduction.py
tests/server/: test_launcher_master_pod.py  test_server_arguments.py
tests/trainers/: test_activation_offload_metrics.py  test_deepseek_v3_training_guards.py  test_fp8_model_builder.py  test_lora_mixed_precision_dtype_policy.py  test_per_component_timer.py  test_step_phase_timing.py  test_trainer_bootstrap.py  test_trainer_model_alignment_flags.py  test_training_utils.py
tests/utils/: test_count_flops.py  test_distillation_teacher_cache.py  test_manual_cuda_timing.py
vast/: analyze_trace.py  launch.sh  launch_multi_gpu.sh  onstart.sh
(+684 files in other folders)
